# mu2eDocChat

./: .env.example  .gitignore  PlotsExample.ipynb  README.md  getWiki.py  mu2e_accuracy_tests.ipynb  per-slack.ipynb  pyproject.toml  summaries-2.ipynb  thisMu2e.sh  wikiRetrival.py
apps/: mu2eSlackLLM.py
attic/: parser_old.py  wikiRetrival.py
doc/: anl.md  chat.md  collections.md  docdb.md  eval.md  install.md  search.md  slack.md  web.md
embeddings/: pptxEmbeddings.ipynb
evaluation/: mu2e_accuracy_tests.ipynb
examples/: ArgoAPIexample.ipynb  BasicClaudePrompt.ipynb  EmbeddingDataPlots.ipynb  PlotsExample.ipynb  SimpleAskExample.ipynb  chatlas_prompt_multiqa_collection_results.csv
examples/evaluation_csv_files/: chatlas_prompt_ATLAS_collection_results.csv  chatlas_prompt_argo_collection_results.csv  chatlas_prompt_custom_collection_results.csv  chatlas_prompt_default_collection_results.csv  original_prompt_ATLAS_collection_results.csv  original_prompt_argo_collection_results.csv  original_prompt_custom_collection_results.csv  original_prompt_default_collection_results.csv  original_prompt_multiqa_collection_results.csv  queries_prompt_custom_collection.csv  queries_prompt_multiqa_collection.csv
mcp-servers/docdb/: REDME.md  server.py
mu2e/: __init__.py  agent_tasks.py  agents.py  anl.py  chat.py  chat_mcp.py  chunking.py  collections.py  core.py  docdb.py  generate_training_data.py  parser.py  rag.py  search.py  slack.py  thisMu2e.sh  tools.py  utils.py  validation.py  wikiRetrival.py
mu2e/cli/: chat_cli.py  docdb_cli.py  slack_cli.py  validation_cli.py
mu2e/mcp/docdb/: REDME.md  __init__.py  chromaTest.py  server.py  server_fastmcp.py
mu2e/mcp/docdb/resources/: __init__.py  conditions.py  metadata_schema.py  overview.py
mu2e/mcp/docdb/tools/: __init__.py  docdb_search_tool.py  fulltext_search_tool.py  get_tool.py  list_tool.py  search_tool.py
mu2e/parsers/: __init__.py  base_parser.py  docx_parser.py  excel_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py
mu2e/training/: training_mu2e_model.py
mu2e/web/: __init__.py  app.py
mu2e/web/static/css/: document-styles.css
mu2e/web/static/js/: document-utils.js
mu2e/web/templates/: base.html  chat.html  document.html  search.html
scripts/: mu2e-start.sh
